--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bvtnet-items-provider",
   "version": "0.2.0",
-  "description": "a modal",
+  "description": "datatables.net ajax items provider for bootstrap-vue b-table",
   "author": "Tom Noogen",
   "main": "dist/index.js",
   "license": "MIT",
@@ -32,25 +32,28 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "ava": "^2.3.0",
+    "axios": "^0.19.0",
     "babel-eslint": "^10.0.3",
-    "browser-env": "^3.2.6",
+    "bootstrap-vue": "^2.1.0",
+    "browser-env": "^3.3.0",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.0.1",
     "cross-env": "^5.2.1",
+    "es6-promise": "^4.2.8",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.4.0",
+    "eslint-config-prettier": "^6.9.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^3.0.2",
+    "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
     "laravel-mix": "^4.1.2",
     "nyc": "^14.1.1",
     "raw-loader": "^3.1.0",
     "smart-banner-webpack-plugin": "^3.0.1",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
     "> 1%",
