--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
   "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.8.4",
+    "@babel/plugin-transform-runtime": "^7.8.3",
     "@babel/preset-env": "^7.8.4",
     "@babel/register": "^7.8.3",
+    "@babel/runtime": "^7.8.4",
     "ava": "^2.3.0",
     "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
@@ -57,6 +59,7 @@
     "laravel-mix": "^4.1.2",
     "nyc": "^14.1.1",
     "raw-loader": "^3.1.0",
+    "sinon": "^8.1.1",
     "smart-banner-webpack-plugin": "^3.0.1",
     "vue-template-compiler": "^2.6.11"
   },
