--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "watch-poll": "npm run watch -- --watch-poll",
     "build": "npm run production",
     "production": "cross-env NODE_ENV=build node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "test": "cross-env NODE_ENV=test node_modules/.bin/nyc node_modules/.bin/ava",
+    "test": "cross-env NODE_ENV=test node_modules/.bin/nyc node_modules/.bin/ava --verbose",
     "watch-test": "npm run test -- --watch",
     "lint": "eslint --ext .js,.vue src/",
     "lint-fix": "eslint --fix --ext .js,.vue src/",
@@ -44,7 +44,8 @@
     "ava": "^2.3.0",
     "axios": "^0.19.2",
     "babel-eslint": "^10.0.3",
-    "bootstrap-vue": "^2.4.0",
+    "babel-plugin-istanbul": "^6.0.0",
+    "bootstrap-vue": "^2.5.0",
     "browser-env": "^3.3.0",
     "browser-sync": "^2.26.7",
     "browser-sync-webpack-plugin": "^2.0.1",
