--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": ["@babel/preset-env"],
+  "presets": [
+    ["@babel/preset-env", {
+      "targets": {
+        "browsers": ["> 1%" , "last 5 versions", "not ie < 11"]
+      }
+    }]
+  ],
   "plugins": [
     ["@babel/plugin-transform-runtime",
       {
