--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-vue": "^5.2.3",
     "file-loader": "^3.0.1",
     "laravel-mix": "^4.1.2",
+    "mock-webstorage": "^1.1.0",
     "nyc": "^14.1.1",
     "raw-loader": "^3.1.0",
     "sinon": "^8.1.1",
