--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bvtnet-items-provider",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "datatables.net ajax items provider for bootstrap-vue b-table",
   "author": "Tom Noogen",
   "main": "dist/index.js",
@@ -24,45 +24,44 @@
     "type": "git"
   },
   "scripts": {
-    "watch": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch-poll": "npm run watch -- --watch-poll",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
     "build": "npm run production",
-    "production": "cross-env NODE_ENV=build node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "production": "mix --production",
     "test": "cross-env NODE_ENV=test node_modules/.bin/nyc node_modules/.bin/ava --verbose",
     "lint": "eslint --ext .js,.vue src/",
     "lint-fix": "eslint --fix --ext .js,.vue src/",
     "check-outdated": "npm outdated"
   },
-  "dependencies": {},
   "devDependencies": {
-    "@babel/core": "^7.10.2",
-    "@babel/plugin-transform-runtime": "^7.10.1",
-    "@babel/preset-env": "^7.10.2",
-    "@babel/register": "^7.10.1",
-    "@babel/runtime": "^7.10.2",
-    "ava": "^3.8.2",
+    "@babel/core": "^7.12.10",
+    "@babel/plugin-transform-runtime": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "@babel/register": "^7.12.10",
+    "ava": "^3.15.0",
     "axios": "^0.21.1",
     "babel-eslint": "^10.1.0",
     "babel-plugin-istanbul": "^6.0.0",
-    "bootstrap-vue": "^2.15.0",
+    "bootstrap-vue": "^2.21.2",
     "browser-env": "^3.3.0",
-    "browser-sync": "^2.26.7",
-    "browser-sync-webpack-plugin": "^2.0.1",
-    "cross-env": "^5.2.1",
+    "browser-sync": "^2.26.13",
+    "browser-sync-webpack-plugin": "^2.3.0",
+    "cross-env": "^7.0.3",
     "es6-promise": "^4.2.8",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^6.11.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
     "eslint-friendly-formatter": "^4.0.1",
-    "eslint-loader": "^3.0.4",
-    "eslint-plugin-vue": "^5.2.3",
-    "file-loader": "^3.0.1",
-    "laravel-mix": "^5.0.4",
+    "eslint-plugin-vue": "^7.4.1",
+    "eslint-webpack-plugin": "^2.4.1",
+    "file-loader": "^6.2.0",
+    "laravel-mix": "^6.0.6",
     "mock-webstorage": "^1.1.0",
-    "nyc": "^14.1.1",
-    "raw-loader": "^3.1.0",
-    "sinon": "^8.1.1",
-    "smart-banner-webpack-plugin": "^3.0.1",
-    "vue-template-compiler": "^2.6.11"
+    "nyc": "^15.1.0",
+    "raw-loader": "^4.0.2",
+    "sinon": "^9.2.2",
+    "vue": "^2.6.12",
+    "vue-loader": "^15.9.6",
+    "vue-template-compiler": "^2.6.12"
   },
   "ava": {
     "require": [
